feat(device) detect brand Samsung models: GALAXY Tab 4 8.0" LTE (SM-T337A, SM-T337V, SM-T337T), GALAXY Tab 4 10.1" LTE (SM-T537A),  GALAXY Grand Prime (SM-G530R7, SM-S920L), GALAXY S6 Edge (SM-G925X), GALAXY S6 Edge+ (SM-G928X), GALAXY J1 (SM-J100VPP),  GALAXY J1 Mini (SM-J105M), GALAXY J5 (2015) (SM-J5007), GALAXY Note 5 (SM-N920X), GALAXY Ace 4 Neo (SM-G318ML),  GALAXY E5 (SM-E500YZ, SM-S978L), GALAXY A7 (SM-A700X), GALAXY A5 (SM-A5009), Ativ SE (SM-W750V), GALAXY Core Prime (SM-S820L),  GALAXY A3 (2015) (SM-A300XU), GALAXY Tab S 8.4" LTE (SM-T707A), GALAXY Tab A 8.0" LTE (SM-T357W, SM-T357T)
feat(device) detect brand Soundmax model: SM-LED40M04S

issue #6328

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -10614,7 +10614,7 @@ Siemens:
 
 # Soundmax
 Soundmax:
-   regex: '(SM-LED32M(?:11|04)S)(?:_-Ver01)?[);/ ]'
+   regex: '((?:SM-LED32M(?:11|04)S)(?:_-Ver01)?|SM-LED40M04S)[);/ ]'
    device: 'tv'
    model: '$1'
 
@@ -10791,13 +10791,13 @@ Samsung:
     - regex: '(?:SAMSUNG-)?SM-T330'
       device: 'tablet'
       model: 'GALAXY Tab 4 8.0" WiFi'
-    - regex: '(?:SAMSUNG-)?SM-T33[15]'
+    - regex: '(?:SAMSUNG-)?SM-(?:T33[15]|T337[AVT])'
       device: 'tablet'
       model: 'GALAXY Tab 4 8.0" LTE'
     - regex: '(?:SAMSUNG-)?SM-T520'
       device: 'tablet'
       model: 'GALAXY TabPRO 10.1" WiFi'
-    - regex: '(?:SAMSUNG-)?SM-T53[15]'
+    - regex: '(?:SAMSUNG-)?SM-(?:T53[15]|T537A)'
       device: 'tablet'
       model: 'GALAXY Tab 4 10.1" LTE'
     - regex: '(?:SAMSUNG-)?SM-T536[);/ ]'
@@ -10818,7 +10818,7 @@ Samsung:
     - regex: '(?:SAMSUNG-)?SM-T700'
       device: 'tablet'
       model: 'GALAXY Tab S 8.4" WiFi'
-    - regex: '(?:SAMSUNG-)?SM-T705'
+    - regex: '(?:SAMSUNG-)?SM-(?:T705|T707A)'
       device: 'tablet'
       model: 'GALAXY Tab S 8.4" LTE'
     - regex: '(?:SAMSUNG-)?SM-T800'
@@ -10857,7 +10857,7 @@ Samsung:
     - regex: '(?:SAMSUNG-)?SM-T3[58]0'
       device: 'tablet'
       model: 'GALAXY Tab A 8.0" WiFi'
-    - regex: '(?:SAMSUNG-)?SM-(?:P350|T3[58]5)'
+    - regex: '(?:SAMSUNG-)?SM-(?:P350|T3[58]5|T357[TW])'
       device: 'tablet'
       model: 'GALAXY Tab A 8.0" LTE'
     - regex: '(?:SAMSUNG-)?SM-T387(?:R4|VK|AA|[WVT])'
@@ -10953,7 +10953,7 @@ Samsung:
       model: 'GALAXY Ace 4 Duos'
     - regex: '(?:SAMSUNG-)?SM-G313[HU]'
       model: 'GALAXY Ace 4 Lite'
-    - regex: '(?:SAMSUNG-)?SM-G318H[);/ ]'
+    - regex: '(?:SAMSUNG-)?SM-G318(?:H|ML)[);/ ]'
       model: 'GALAXY Ace 4 Neo'
     - regex: '(?:SAMSUNG-)?SM-G9100[);/ ]'
       model: 'GALAXY S II'
@@ -10983,7 +10983,7 @@ Samsung:
       model: 'GALAXY Core Advance'
     - regex: '(?:SAMSUNG-)?GT-I8730'
       model: 'GALAXY Express'
-    - regex: '(?:SAMSUNG-)?SM-E500(?:HQ|[0FHM])'
+    - regex: '(?:SAMSUNG-)?SM-(?:E500(?:HQ|YZ|[0FHM])|S978L)'
       model: 'GALAXY E5'
     - regex: '(?:SAMSUNG-)?SM-E700(?:0|9|F|H|M)'
       model: 'GALAXY E7'
@@ -11100,17 +11100,17 @@ Samsung:
     - regex: '(?:SAMSUNG-)?SM-G318[HM]Z'
       model: 'GALAXY V Plus'
     - regex: '(?:SAMSUNG-)?SM-(?:G355[HM]|G3556D)'
-      model: 'GALAXY CORE 2'
+      model: 'GALAXY Core 2'
     - regex: '(?:SAMSUNG-)?SM-G350'
-      model: 'GALAXY CORE Plus'
-    - regex: '(?:SAMSUNG-)?SM-G360[FH]?'
-      model: 'GALAXY CORE Prime'
+      model: 'GALAXY Core Plus'
+    - regex: '(?:SAMSUNG-)?SM-(?:G360[FH]?|S820L)'
+      model: 'GALAXY Core Prime'
     - regex: '(?:SAMSUNG-)?SM-G361[FH]?'
-      model: 'GALAXY CORE Prime Value Edition'
+      model: 'GALAXY Core Prime Value Edition'
     - regex: '(?:SAMSUNG-)?SM-(?:G386F|G3586V)'
-      model: 'GALAXY CORE LTE'
+      model: 'GALAXY Core LTE'
     - regex: '(?:SAMSUNG-)?SM-G3568V'
-      model: 'GALAXY CORE Mini 4G'
+      model: 'GALAXY Core Mini 4G'
     - regex: '(?:SAMSUNG-)?SM-G3815'
       model: 'GALAXY EXPRESS II'
     - regex: '(?:SAMSUNG-)?SM-G388F'
@@ -11135,9 +11135,9 @@ Samsung:
       model: 'GALAXY S6'
     - regex: '(?:SAMSUNG-)?SM-G890A'
       model: 'GALAXY S5 Active'
-    - regex: '(?:SAMSUNG-)?SM-G925[0ADFIKLPRSTVW]|SCV31|404SC'
+    - regex: '(?:SAMSUNG-)?SM-G925[0ADFIKLPRSTVWX]|SCV31|404SC'
       model: 'GALAXY S6 Edge'
-    - regex: '(?:SAMSUNG-)?SM-G928(?:7C|R4|W8|[07ACFGIKLPSTV])'
+    - regex: '(?:SAMSUNG-)?SM-G928(?:7C|R4|W8|[07ACFGIKLPSTVX])'
       model: 'GALAXY S6 Edge+'
     - regex: '(?:SAMSUNG-)?SM-G930(?:FD|W8|[0AFKLPRSTUVX8])?[);/ ]'
       model: 'GALAXY S7'
@@ -11193,13 +11193,13 @@ Samsung:
       model: 'GALAXY A01'
     - regex: '(?:SAMSUNG-)?SM-A260[FG]'
       model: 'GALAXY A2 Core'
-    - regex: '(?:SAMSUNG-)?SM-A300(?:FU|YZ|[09FGHMY])'
+    - regex: '(?:SAMSUNG-)?SM-A300(?:FU|YZ|XU|[09FGHMY])'
       model: 'GALAXY A3 (2015)'
     - regex: '(?:SAMSUNG-)?SM-A310(?:N0|[FMYX])'
       model: 'GALAXY A3 (2016)'
     - regex: '(?:SAMSUNG-)?SM-A320(?:FL|[FYX])'
       model: 'GALAXY A3 (2017)'
-    - regex: '(?:SAMSUNG-)?SM-A500[LSWY]?[);/ ]'
+    - regex: '(?:SAMSUNG-)?SM-A500[LSWY9]?[);/ ]'
       model: 'GALAXY A5'
     - regex: '(?:SAMSUNG-)?SM-A500[FGHKM0]'
       model: 'GALAXY A5 Duos'
@@ -11217,7 +11217,7 @@ Samsung:
       model: 'GALAXY A6s (2018)'
     - regex: '(?:SAMSUNG-)?SM-A60(?:60|6Y)'
       model: 'GALAXY A60'
-    - regex: '(?:SAMSUNG-)?SM-A700(?:YD|[09FHKLS])'
+    - regex: '(?:SAMSUNG-)?SM-A700(?:YD|[09FHKLSX])'
       model: 'GALAXY A7'
     - regex: '(?:SAMSUNG-)?SM-A710[08FKLMSYX]'
       model: 'GALAXY A7 (2016)'
@@ -11301,10 +11301,10 @@ Samsung:
       model: 'GALAXY S III Neo'
     - regex: '(?:SAMSUNG-)?SM-S120VL[);/ ]'
       model: 'GALAXY Luna'
-    - regex: '(?:SAMSUNG-)?SM-J100(?:FN|MU|[FHMY])'
+    - regex: '(?:SAMSUNG-)?SM-J100(?:FN|VPP|MU|[FHMY])'
       model: 'GALAXY J1'
-    - regex: '(?:SAMSUNG-)?SM-J105[BFHY]'
-      model: 'GALAXY J1 mini'
+    - regex: '(?:SAMSUNG-)?SM-J105[BFHYM]'
+      model: 'GALAXY J1 Mini'
     - regex: '(?:SAMSUNG-)?SM-J106[FMHB]'
       model: 'GALAXY J1 mini Prime'
     - regex: '(?:SAMSUNG-)?SM-J120(?:ZN|[AFHGMTW])'
@@ -11351,7 +11351,7 @@ Samsung:
       model: 'GALAXY J3 (2018)'
     - regex: '(?:SAMSUNG-)?SM-J400[FGM]'
       model: 'GALAXY J4'
-    - regex: '(?:SAMSUNG-)?SM-J500(?:[8F]|FN|G|Y|M|H|N0)[);/ ]'
+    - regex: '(?:SAMSUNG-)?SM-J500(?:[8F]|FN|[7GYMH]|N0)[);/ ]'
       model: 'GALAXY J5 (2015)'
     - regex: '(?:SAMSUNG-)?SM-(?:J510(?:[8FHKLS]|[UFMG]N)|5108|G510H)[);/ ]'
       model: 'GALAXY J5 (2016)'
@@ -11373,7 +11373,7 @@ Samsung:
       model: 'GALAXY J7 (2015)'
     - regex: '(?:SAMSUNG-)?SM-(?:J700(?:T1|T)|J710GN|J7109)'
       model: 'GALAXY J7 (2016)'
-    - regex: '(?:SAMSUNG-)?SM-(?:J730[K]|J727(?:[AUSF]|R4))'
+    - regex: '(?:SAMSUNG-)?SM-(?:J730[K]|J727(?:[AUSF]|R4))[);/ ]'
       model: 'GALAXY J7 (2017)'
     - regex: '(?:SAMSUNG-)?SM-J737(?:[AVPUS]|T1?|VPP|R4)[);/ ]'
       model: 'GALAXY J7 (2018)'
@@ -11520,7 +11520,7 @@ Samsung:
       device: 'phablet'
     - regex: '(?:SAMSUNG-)?SM-G720(?:AX|N0|[02])[);/ ]'
       model: 'GALAXY Grand Max'
-    - regex: '(?:SAMSUNG-)?SM-G53(?:0[FTYHWMP]|0[AF]Z|1[FH]|0[689]W|0MU|0BT|0R4)[);/ ]'
+    - regex: '(?:SAMSUNG-)?SM-(?:G53(?:0[FTYHWMP]|0[AF]Z|1[FH]|0[689]W|0MU|0BT|0R[47])|S920L)[);/ ]'
       model: 'GALAXY Grand Prime'
       device: 'phablet'
     - regex: '(?:SAMSUNG-)?SM-G531(?:BT|[MY])[);/ ]'
@@ -11559,7 +11559,7 @@ Samsung:
     - regex: '(?:SAMSUNG-)?SM-N915'
       model: 'GALAXY Note 4 Edge'
       device: 'phablet'
-    - regex: '(?:SAMSUNG-)?SM-N920(?:[0ACGIKLSTPFV]|R[467]|W8)'
+    - regex: '(?:SAMSUNG-)?SM-N920(?:[0ACGIKLSTPFVX]|R[467]|W8)'
       model: 'GALAXY Note 5'
       device: 'phablet'
     - regex: '(?:SAMSUNG-)?SM-N9208'
@@ -11604,6 +11604,9 @@ Samsung:
     - regex: '(?:SAMSUNG[- ])?(?:SM-N986(?:[B|N|U|W]|B/DS|U1))'
       model: 'GALAXY Note 20 Ultra 5G'
       device: 'phablet'
+
+    - regex: '(?:SAMSUNG-)?SM-W750V'
+      model: 'Ativ SE'
 
     # explicit feature phones
     - regex: '(?:SAMSUNG-)?GT-E2152'
