--- a/Tests/fixtures/smartphone-11.yml
+++ b/Tests/fixtures/smartphone-11.yml
@@ -3653,7 +3653,7 @@
   device:
     type: smartphone
     brand: SA
-    model: GALAXY CORE 2
+    model: GALAXY Core 2
   os_family: Android
   browser_family: Android Browser
 - 
@@ -3673,7 +3673,7 @@
   device:
     type: smartphone
     brand: SA
-    model: GALAXY CORE 2
+    model: GALAXY Core 2
   os_family: Android
   browser_family: Unknown
 - 
@@ -3713,7 +3713,7 @@
   device:
     type: smartphone
     brand: SA
-    model: GALAXY CORE LTE
+    model: GALAXY Core LTE
   os_family: Android
   browser_family: Android Browser
 - 
@@ -3733,7 +3733,7 @@
   device:
     type: smartphone
     brand: SA
-    model: GALAXY CORE LTE
+    model: GALAXY Core LTE
   os_family: Android
   browser_family: Android Browser
 - 
@@ -3773,7 +3773,7 @@
   device:
     type: smartphone
     brand: SA
-    model: GALAXY CORE Plus
+    model: GALAXY Core Plus
   os_family: Android
   browser_family: Chrome
 - 
@@ -3793,7 +3793,7 @@
   device:
     type: smartphone
     brand: SA
-    model: GALAXY CORE Prime Value Edition
+    model: GALAXY Core Prime Value Edition
   os_family: Android
   browser_family: Chrome
 - 
@@ -4313,7 +4313,7 @@
   device:
     type: smartphone
     brand: SA
-    model: GALAXY J1 mini
+    model: GALAXY J1 Mini
   os_family: Android
   browser_family: Android Browser
 - 
@@ -4333,7 +4333,7 @@
   device:
     type: smartphone
     brand: SA
-    model: GALAXY J1 mini
+    model: GALAXY J1 Mini
   os_family: Android
   browser_family: Android Browser
 - 
@@ -4353,7 +4353,7 @@
   device:
     type: smartphone
     brand: SA
-    model: GALAXY J1 mini
+    model: GALAXY J1 Mini
   os_family: Android
   browser_family: Chrome
 - 
