--- a/Tests/fixtures/smartphone-16.yml
+++ b/Tests/fixtures/smartphone-16.yml
@@ -7656,7 +7656,7 @@
   device:
     type: smartphone
     brand: SA
-    model: GALAXY CORE 2
+    model: GALAXY Core 2
   os_family: Android
   browser_family: Android Browser
 -
@@ -7676,7 +7676,7 @@
   device:
     type: smartphone
     brand: SA
-    model: GALAXY CORE Mini 4G
+    model: GALAXY Core Mini 4G
   os_family: Android
   browser_family: Unknown
 -
