feat(device) detect brand Samsung models: GALAXY View 18.4" LTE (SM-T677, SM-T677NK, SM-T677NL, SM-T677V),  GALAXY View 18.4" WiFi (SM-T670), GALAXY Tab 4 10.1" LTE (SM-T537V), GALAXY J3 Orbit (SM-S357BL)
issue #6328

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -10638,9 +10638,12 @@ Samsung:
     - regex: '(?:SAMSUNG-)?(?:GT-)?N5100'
       device: 'tablet'
       model: 'GALAXY Note 8.0"'
-    - regex: '(?:SAMSUNG-)?SM-T677A'
+    - regex: '(?:SAMSUNG-)?SM-T677(?:[ATV]|N[KL])?[);/ ]'
       device: 'tablet'
       model: 'GALAXY View 18.4" LTE'
+    - regex: '(?:SAMSUNG-)?SM-T670[);/ ]'
+      device: 'tablet'
+      model: 'GALAXY View 18.4" WiFi'
     - regex: '(?:SAMSUNG-)?(?:GT-)?N5110'
       device: 'tablet'
       model: 'GALAXY Note 8.0" WiFi'
@@ -10797,7 +10800,7 @@ Samsung:
     - regex: '(?:SAMSUNG-)?SM-T520'
       device: 'tablet'
       model: 'GALAXY TabPRO 10.1" WiFi'
-    - regex: '(?:SAMSUNG-)?SM-(?:T53[15]|T537A)'
+    - regex: '(?:SAMSUNG-)?SM-(?:T53[15]|T537[AV])'
       device: 'tablet'
       model: 'GALAXY Tab 4 10.1" LTE'
     - regex: '(?:SAMSUNG-)?SM-T536[);/ ]'
@@ -11324,7 +11327,7 @@ Samsung:
       model: 'GALAXY J2 Core'
     - regex: '(?:SAMSUNG-)?SM-J(?:210F|250[FNMGY])'
       model: 'GALAXY J2 Pro'
-    - regex: '(?:SAMSUNG-)?SM-S367VL'
+    - regex: '(?:SAMSUNG-)?SM-(?:S367VL|S357BL)'
       model: 'GALAXY J3 Orbit'
     - regex: '(?:SAMSUNG-)?SM-J311(?:[09]|9S)'
       model: 'GALAXY J3 Pro'
