Add 'PRTG Network Monitor'
Closes #6387

--- a/regexes/bots.yml
+++ b/regexes/bots.yml
@@ -1023,6 +1023,14 @@
     name: 'Bitlove'
     url: 'http://bitlove.org/'
 
+- regex: 'PRTG Network Monitor'
+  name: 'PRTG Network Monitor'
+  category: 'Network Monitor'
+  url: 'https://www.paessler.com/prtg'
+  producer:
+    name: 'Paessler AG'
+    url: 'https://www.paessler.com'
+
 - regex: 'psbot(-page)?'
   name: 'Picsearch bot'
   category: 'Search bot'
