Add 'PRTG Network Monitor' to Tests

--- a/Tests/fixtures/bots.yml
+++ b/Tests/fixtures/bots.yml
@@ -2267,6 +2267,15 @@
       name: Bitlove
       url: http://bitlove.org/
 - 
+  user_agent: Mozilla/5.0 (compatible; PRTG Network Monitor (www.paessler.com); Windows)
+  bot:
+    name: PRTG Network Monitor
+    category: Network Monitor
+    url: https://www.paessler.com/prtg
+    producer:
+      name: Paessler AG
+      url: https://www.paessler.com
+- 
   user_agent: QuerySeekerSpider ( http://queryseeker.com/bot.html )
   bot:
     name: QuerySeekerSpider
