feat(device) detect brand Panasonic model: Toughpad FZ-B2D, Toughpad FZ-X1 feat(device) rename model for brand Panasonic: Toughpad to Toughpad FZ-N1

--- a/Tests/fixtures/smartphone-10.yml
+++ b/Tests/fixtures/smartphone-10.yml
@@ -2663,7 +2663,7 @@
   device:
     type: smartphone
     brand: PA
-    model: Toughpad
+    model: Toughpad FZ-N1
   os_family: Android
   browser_family: Chrome
 - 
