--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -10228,7 +10228,7 @@ Panacom:
 
 # panasonic
 Panasonic:
-  regex: 'Panasonic|PANATV[0-9]+|Viera/|(?:P902i|P-08D)[);/ ]|Eluga[ _]|FZ-N1|P55 Novo 4G|DMC-CM1'
+  regex: 'Panasonic|PANATV[0-9]+|Viera/|(?:P902i|P-08D|FZ-B2D|FZ-[NX]1)[);/ ]|Eluga[ _]|P55 Novo 4G|DMC-CM1'
   device: 'smartphone'
   models:
     - regex: 'Eluga[ _-]([^;/]+) Build'
@@ -10238,8 +10238,11 @@ Panasonic:
     - regex: '(DMC-CM1)'
       model: 'Lumix $1'
       device: 'camera'
-    - regex: 'FZ-N1'
-      model: 'Toughpad'
+    - regex: '(FZ-[XN]1)[);/ ]'
+      model: 'Toughpad $1'
+    - regex: 'FZ-B2D[);/ ]'
+      model: 'Toughpad FZ-B2D'
+      device: 'tablet'
     - regex: 'P55 Novo 4G'
       model: 'P55 Novo 4G'
     - regex: 'P902i[);/ ]'
