--- a/Tests/fixtures/smartphone-18.yml
+++ b/Tests/fixtures/smartphone-18.yml
@@ -1319,5 +1319,43 @@
     model: GALAXY J3 Orbit
   os_family: Android
   browser_family: Chrome
-
-
+-
+  user_agent: Mozilla/5.0 (Linux; Android 6.0.1; FZ-B2D Build/MMB29M; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/55.0.2883.91 Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: 6.0.1
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Webview
+    short_name: CV
+    version: 55.0.2883.91
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: PA
+    model: Toughpad FZ-B2D
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 4.2.2; FZ-X1 Build/JDQ39) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/50.0.2661.89 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: 4.2.2
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    short_name: CM
+    version: 50.0.2661.89
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: PA
+    model: Toughpad FZ-X1
+  os_family: Android
+  browser_family: Chrome
