feat(device) detect brand Samsung models: GALAXY Core Max (SM-G5108Q), GALAXY Grand Prime (SM-G530A), GreatCall Touch 3 (SM-G310R5)
issue #6328

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -11120,6 +11120,8 @@ Samsung:
       model: 'GALAXY Core LTE'
     - regex: '(?:SAMSUNG-)?SM-G3568V'
       model: 'GALAXY Core Mini 4G'
+    - regex: '(?:SAMSUNG-)?SM-G5108Q'
+      model: 'GALAXY Core Max'
     - regex: '(?:SAMSUNG-)?SM-G3815'
       model: 'GALAXY EXPRESS II'
     - regex: '(?:SAMSUNG-)?SM-G388F'
@@ -11529,7 +11531,7 @@ Samsung:
       device: 'phablet'
     - regex: '(?:SAMSUNG-)?SM-G720(?:AX|N0|[02])[);/ ]'
       model: 'GALAXY Grand Max'
-    - regex: '(?:SAMSUNG-)?SM-(?:G53(?:0[FTYHWMP]|0[AF]Z|1[FH]|0[689]W|0MU|0BT|0R[47])|S920L)[);/ ]'
+    - regex: '(?:SAMSUNG-)?SM-(?:G53(?:0[AFTYHWMP]|0[AF]Z|1[FH]|0[689]W|0MU|0BT|0R[47])|S920L)[);/ ]'
       model: 'GALAXY Grand Prime'
       device: 'phablet'
     - regex: '(?:SAMSUNG-)?SM-G531(?:BT|[MY])[);/ ]'
@@ -11616,6 +11618,8 @@ Samsung:
 
     - regex: '(?:SAMSUNG-)?SM-W750V'
       model: 'Ativ SE'
+    - regex: '(?:SAMSUNG-)?SM-G310R5'
+      model: 'GreatCall Touch 3'
 
     # explicit feature phones
     - regex: '(?:SAMSUNG-)?GT-E2152'
