--- a/Tests/fixtures/smartphone-18.yml
+++ b/Tests/fixtures/smartphone-18.yml
@@ -39,3 +39,23 @@
     model: Nubia Play
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; U; Android 10; zh-cn; M2007J1SC Build/QKQ1.200419.002) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/71.0.3578.141 Mobile Safari/537.36 XiaoMi/MiuiBrowser/13.0.28
+  os:
+    name: Android
+    short_name: AND
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: MIUI Browser
+    short_name: MU
+    version: 13.0.28
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: smartphone
+    brand: XI
+    model: MI 10 Ultra 5G
+  os_family: Android
+  browser_family: Android Browser
