--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -9786,7 +9786,7 @@ OnePlus:
 
 # Realme (sub brand Oppo)
 Realme:
-  regex: '(?:RMX(?:19(03|4[1235]|19|9[23]|2[157]|[01379]1)|20[025-7]1|20[03]2|2027|2063|2072|2086|20[234]0|218[059]|18(0[1579]|11|3[13]|2[157]|[45]1|45))|(?:OPPO[ _]?)?CPH1861)[ ;/)]'
+  regex: '(?:RMX(?:19(03|4[1235]|19|9[23]|2[157]|[01379]1)|20[025-7]1|20[03]2|2027|2063|2072|2086|20[234]0|2176|218[059]|18(0[1579]|11|3[13]|2[157]|[45]1|45))|(?:OPPO[ _]?)?CPH1861)[ ;/)]'
   device: 'smartphone'
   models:
     - regex: '(?:OPPO[ _]?)?CPH1861[);/ ]'
@@ -9809,6 +9809,8 @@ Realme:
       model: 'X2 Dual'
     - regex: 'RMX1931'
       model: 'X2 Pro'
+    - regex: 'RMX2176[);/ ]'
+      model: 'X7 5G'
     - regex: 'RMX1921'
       model: 'XT'
     - regex: 'RMX19(1[19]|27)'
