fix(device) fix test

--- a/Tests/fixtures/smartphone.yml
+++ b/Tests/fixtures/smartphone.yml
@@ -8393,7 +8393,7 @@
   device:
     type: smartphone
     brand: AC
-    model: E100
+    model: beTouch E100
   os_family: Windows Mobile
   browser_family: Internet Explorer
 - 
@@ -8946,7 +8946,7 @@
   device:
     type: smartphone
     brand: AC
-    model: S200
+    model: neoTouch S200
   os_family: Windows Mobile
   browser_family: Internet Explorer
 - 
