feat(device) detect brand Vivo model: iQOO U1 (V2023A) feat(device) detect brand X-TIGI model: Hope 7 Mate

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -2458,7 +2458,7 @@ VGO TEL:
 #
 # Vivo
 Vivo:
-  regex: '((?:VIV-|BBG-)?(?<!FBCR/)vivo(?!(?:Browser)))|(?:V1730(D[AT]|GA)|V18(18CA|01A0|13B[AT]|18T|09[AT]|1[346][AT]|[13]8[AT]|14A|24[B]?A|2[19][AT]|3[12][AT]|36[AT])|V1731CA|V1732[AT]|V1818CT|V19[01]1[AT]|V1932[AT]|V191[346][AT]|V192[1348]A|V193[04]A|V194[15]A|V1938CT|V1955A|V1938T|V1730EA|V19[26]2A|V196[35]A|V198[16]A|V1936A[L]?|V19[59]0A|V200[125]A|1819)[);/ ]'
+  regex: '((?:VIV-|BBG-)?(?<!FBCR/)vivo(?!(?:Browser)))|(?:V1730(D[AT]|GA)|V18(18CA|01A0|13B[AT]|18T|09[AT]|1[346][AT]|[13]8[AT]|14A|24[B]?A|2[19][AT]|3[12][AT]|36[AT])|V1731CA|V1732[AT]|V1818CT|V19[01]1[AT]|V1932[AT]|V191[346][AT]|V192[1348]A|V193[04]A|V194[15]A|V1938CT|V1955A|V1938T|V1730EA|V19[26]2A|V196[35]A|V198[16]A|V1936A[L]?|V19[59]0A|V200[125]A|1819|V2023A)[);/ ]'
   device: 'smartphone'
   models:
     - regex: 'V1824[B]?A[);/ ]'
@@ -2477,6 +2477,8 @@ Vivo:
       model: 'iQOO Neo 855'
     - regex: 'V1986A[);/ ]'
       model: 'iQOO Z1'
+    - regex: 'V2023A[);/ ]'
+      model: 'iQOO U1'
     - regex: 'vivo 1805[);/ ]'
       model: 'Nex'
     - regex: 'V1923A[);/ ]'
@@ -15405,11 +15407,14 @@ MYFON:
 
 # X-TIGI
 X-TIGI:
-  regex: 'X[-_]TIGI'
+  regex: 'X[-_]TIGI|Hope7[_ ]Mate'
   device: 'smartphone'
   models:
     - regex: 'X-TIGI_JOY10_PRO'
       model: 'Joy 10 Pro'
+      device: 'tablet'
+    - regex: 'Hope7[_ ]Mate'
+      model: 'Hope 7 Mate'
       device: 'tablet'
     - regex: 'X-TIGI_JOY7_MAX'
       model: 'Joy 7 Max'
