feat(device) detect brand Asus model: ROG Phone 3 (I003DD)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -2134,6 +2134,8 @@ Asus:
       model: 'ROG Phone'
     - regex: '(?:ASUS_)?(I001D[ABCE]?|ZS660KL)'
       model: 'ROG Phone 2'
+    - regex: '(?:ASUS_)?(I003DD)'
+      model: 'ROG Phone 3'
 
     # general detections
     - regex: 'Asus(?:-|;)?([a-z0-9]+)'
