--- a/Tests/fixtures/smartphone-18.yml
+++ b/Tests/fixtures/smartphone-18.yml
@@ -1639,3 +1639,23 @@
     model: A32
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; U; Android 10; zh-CN; ASUS_I003DD Build/QKQ1.200419.002) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/57.0.2987.108 Quark/4.3.0.142 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Quark
+    short_name: QU
+    version: 4.3.0.142
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: smartphone
+    brand: AU
+    model: ROG Phone 3
+  os_family: Android
+  browser_family: Chrome
