--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -8690,7 +8690,7 @@ Meizu:
 
 # Meitu
 Meitu:
-  regex: '(?:(?<!MI CC 9 )Meitu[2]?|MP1503|MP1512|MP160[23]|MP170[19]|MP171[138])[ ;/)]'
+  regex: '(?:(?<!MI CC 9 )Meitu[2]?|MP1503|MP1512|MP160[235]|MP170[19]|MP171[138])[ ;/)]'
   device: 'smartphone'
   models:
     - regex: 'MP1503[ ;/)]'
@@ -8699,6 +8699,8 @@ Meitu:
       model: 'M6s'
     - regex: 'MP1602[ ;/)]'
       model: 'T8'
+    - regex: 'MP1605[ ;/)]'
+      model: 'V6'
     - regex: 'MP17(?:01|13)[ ;/)]'
       model: 'T8s'
     - regex: 'MP1718[ ;/)]'
@@ -9874,7 +9876,7 @@ Realme:
 
 # oppo
 OPPO:
-  regex: '(?:OB-)?OPPO[ _]?([a-z0-9]+)|N1T|OPG01|(?:X90[07][0679]|U707T?|X909T?|R(?:10[01]1|2001|201[07]|6007|7005|7007|80[13579]|81[13579]|82[01379]|83[013]|800[067]|8015|810[679]|811[13]|820[057])[KLSTW]?|N520[79]|N5117|A33f|A33fw|A37fw?|PAAM00|PAAT00|PAC[TM]00)[);/ ]|R7kf|R7plusf|R7Plusm|A1601|CPH[0-9]{4}|CPH19(69|79|23|1[179])|PB(A[TM]00|CT10|BT30|CM[13]0|[FD]M00)|P(DAM10|ADM00|AF[TM]00|ADT00|AHM00|BBM[03]0|BBT00|BDT00|BFT00|[CB]E[MT]00|CA[MT]00|C[CDG]M00|CA[MT]10|[CD]PM00|CRM00|CDT00|CD[TM]10|CHM[013]0|CKM[08]0|CLM10|DEM[13]0|DHM00|DK[TM]00|DPT00|DB[TM]00|DCM00|[CD]NM00|DVM00)'
+  regex: '(?:OB-)?OPPO[ _]?([a-z0-9]+)|N1T|OPG01|(?:X90[07][0679]|U707T?|X909T?|R(?:10[01]1|2001|201[07]|6007|7005|7007|80[13579]|81[13579]|82[01379]|83[013]|800[067]|8015|810[679]|811[13]|820[057])[KLSTW]?|N520[79]|N5117|A33f|A33fw|A37fw?|PAAM00|PAAT00|PAC[TM]00)[);/ ]|R7kf|R7plusf|R7Plusm|A1601|CPH[0-9]{4}|CPH19(69|79|23|1[179])|PB(A[TM]00|CT10|BT30|CM[13]0|[FD]M00)|P(DAM10|ADM00|AF[TM]00|ADT00|AHM00|BBM[03]0|BBT00|BDT00|BFT00|[CB]E[MT]00|CA[MT]00|C[CDG]M00|CA[MT]10|[CD]PM00|CRM00|CDT00|CD[TM]10|CHM[013]0|CKM[08]0|CLM10|DEM[13]0|DHM00|DK[TM]00|DPT00|DB[TM]00|DCM00|[CD]NM00|DVM00|DYT20)'
   device: 'smartphone'
   models:
     - regex: 'PCHM10[);/ ]'
@@ -9909,6 +9911,8 @@ OPPO:
       model: 'A7'
     - regex: '(?:OPPO[ _]?)?(CPH1801|CPH1717)[);/ ]'
       model: 'A71'
+    - regex: '(?:OPPO[ _]?)?(PDYT20)[);/ ]'
+      model: 'A72'
     - regex: '(?:OPPO[ _]?)?CPH1715[);/ ]'
       model: 'A77'
     - regex: 'PCD[TM]00[);/ ]'
