feat(device) detect new brand Transpeed models: TR99 Mini Plus, TR99, 6K feat(device) detect brand Asus model: ZenFone 2E feat(device) detect brand CUBOT model: Quest Lite feat(device) detect brand Teclast models: P80X EEA, P80X ROW feat(device) detect brand Hotwav model: Pearl K2 feat(device) detect brand Nextbit model: Robin feat(device) detect brand model: WinWin feat(device) detect brand Kazam model: Thunder 450W feat(device) detect brand Anry models: X20, S20
issue #6355

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -2048,6 +2048,8 @@ Asus:
       model: 'ZenFone Max M2'
     - regex: '(?:ASUS_)?(?:Z00[AD]|Z008D|Z008|Z00AD[AB]?)'
       model: 'ZenFone 2'
+    - regex: '(?:ASUS_)?(?:ZenFone 2E)'
+      model: 'ZenFone 2E'
     - regex: '(?:ASUS_)?A007|ZA550KL|ZB553KL|ZB501KL'
       model: 'ZenFone Live'
     - regex: '(?:ASUS_)?(X00RD|G552KL)'
@@ -3647,7 +3649,7 @@ Cube:
 
 # CUBOT
 CUBOT:
-  regex: 'CUBOT|RAINBOW 2|KING_KONG_3|KINGKONG_MINI'
+  regex: 'CUBOT|RAINBOW 2|KING_KONG_3|KINGKONG_MINI|QUEST LITE'
   device: 'smartphone'
   models:
     - regex: 'CHEETAH 2'
@@ -3664,6 +3666,8 @@ CUBOT:
       model: 'King Kong 3'
     - regex: 'KING KONG'
       model: 'King Kong'
+    - regex: 'QUEST LITE'
+      model: 'Quest Lite'
     - regex: 'CUBOT[ _]Echo'
       model: 'Echo'
     - regex: 'CUBOT[ _]MANITO'
@@ -7069,11 +7073,13 @@ Kaan:
 
 # Kazam
 Kazam:
-  regex: 'Kazam ([^;/)]+)( Build|\))|Trooper_X[0-9][0-9][);/ ]|Tornado 348'
+  regex: 'Kazam[);/ ]|Trooper_X[0-9][0-9][);/ ]|Tornado 348'
   device: 'smartphone'
   models:
     - regex: 'Tornado 348'
       model: 'Tornado 348'
+    - regex: 'Thunder 450W'
+      model: 'Thunder 450W'
     - regex: 'Trooper_X([0-9])([0-9])[);/ ]'
       model: 'Trooper X$1.$2'
     - regex: 'Kazam ([^;/)]+)(?: Build|\))'
@@ -9406,7 +9412,7 @@ Neffos:
 
 # Nextbit
 Nextbit:
-  regex: '(Robin) Build'
+  regex: '(Robin)(?: Build|\))'
   device: 'smartphone'
   model: '$1'
 
@@ -12768,7 +12774,7 @@ TCL:
 
 # Teclast
 Teclast:
-  regex: 'Teclast|X98 Air III|X98 Air II\(HG5N\)|Tbook|X80 Power\(B2N4\)|T30_(ROW|EEA)|T10\(E3C6\)|P10S\(N4H5\)|98\(M1E[45789]\)|98\(M3E3\)'
+  regex: 'Teclast|X98 Air III|X98 Air II\(HG5N\)|Tbook|X80 Power\(B2N4\)|(?:T30|P80X)_(ROW|EEA)|T10\(E3C6\)|P10S\(N4H5\)|98\(M1E[45789]\)|98\(M3E3\)'
   device: 'tablet'
   models:
     - regex: 'Tbook[_ -]([^;/]+) Build'
@@ -12777,6 +12783,8 @@ Teclast:
       model: 'T10'
     - regex: 'T30_(ROW|EEA)'
       model: 'T30 $1'
+    - regex: 'P80X_(ROW|EEA)'
+      model: 'P80X $1'
     - regex: 'P10S\(N4H5\)'
       model: 'P10S'
     - regex: '98\(M1E[45789]\)|98\(M3E3\)'
@@ -15706,6 +15714,8 @@ Highscreen:
       model: 'Zera S Power'
     - regex: 'Tasty[;)/ ]'
       model: 'Tasty'
+    - regex: 'WinWin[;)/ ]'
+      model: 'WinWin'
 
 # CVTE
 CVTE:
@@ -16614,7 +16624,7 @@ Lesia:
 
 # Anry
 Anry:
-  regex: 'ANRY-(RS10)[);/ ]'
+  regex: 'ANRY-(RS10|[SX]20)[);/ ]'
   device: 'tablet'
   model: '$1'
 
@@ -17016,7 +17026,7 @@ Sunstech:
 
 # Hotwav
 Hotwav:
-  regex: '(Venus[_ ]X1[024569])[);/ ]'
+  regex: '(Venus[_ ]X1[024569]|Pearl K2)[);/ ]'
   device: 'smartphone'
   model: '$1'
 
@@ -17173,3 +17183,13 @@ Fero:
       model: 'Y1'
     - regex: 'Royale_X2'
       model: 'Royale X2'
+
+# Transpeed
+Transpeed:
+  regex: 'Transpeed_|(?:TR99 MINI\+|TR99)[);/ ]'
+  device: 'tv'
+  models:
+    - regex: 'TR99 MINI\+'
+      model: 'TR99 Mini Plus'
+    - regex: '(?:Transpeed_)?(TR99|6K)[);/ ]'
+      model: '$1'
