--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -2463,10 +2463,9 @@ VGO TEL:
     - regex: 'Venture V([278]|12)[);/ ]'
       model: 'Venture V$1'
 
-#
-# Vivo
+# Vivo (vivo.com.cn, vivo.com)
 Vivo:
-  regex: '((?:VIV-|BBG-)?(?<!FBCR/)vivo(?!(?:Browser)))|(?:V1730(D[AT]|GA)|V18(18CA|01A0|13B[AT]|18T|09[AT]|1[346][AT]|[13]8[AT]|14A|24[B]?A|2[19][AT]|3[12][AT]|36[AT])|V1731CA|V1732[AT]|V1818CT|V19[01]1[AT]|V1932[AT]|V191[346][AT]|V192[1348]A|V193[04]A|V194[15]A|V1938CT|V1955A|V1938T|V1730EA|V19[26]2A|V196[35]A|V198[16]A|V1936A[L]?|V19[59]0A|V200[125]A|1819|V2023A)[);/ ]'
+  regex: '((?:VIV-|BBG-)?(?<!FBCR/)vivo(?!(?:Browser)))|(?:V1730(D[AT]|GA)|V18(18CA|01A0|13B[AT]|18T|09[AT]|1[346][AT]|[13]8[AT]|14A|24[B]?A|2[19][AT]|3[12][AT]|36[AT])|V1731CA|V1732[AT]|V1818CT|V19[01]1[AT]|V1932[AT]|V191[346][AT]|V192[1348]A|V193[04]A|V194[15]A|V1938CT|V1955A|V1938T|V1730EA|V19[26]2A|V196[35]A|V198[16]A|V1936A[L]?|V19[59]0A|V200[125]A|1819|V201[12]A|V202[0345]C?A)[);/ ]'
   device: 'smartphone'
   models:
     - regex: 'V1824[B]?A[);/ ]'
@@ -2485,8 +2484,14 @@ Vivo:
       model: 'iQOO Neo 855'
     - regex: 'V1986A[);/ ]'
       model: 'iQOO Z1'
+    - regex: 'V2012A[);/ ]'
+      model: 'iQOO Z1x'
     - regex: 'V2023A[);/ ]'
       model: 'iQOO U1'
+    - regex: 'V2024A[);/ ]'
+      model: 'iQOO 5'
+    - regex: 'V2025A[);/ ]'
+      model: 'iQOO 5 Pro'
     - regex: 'vivo 1805[);/ ]'
       model: 'Nex'
     - regex: 'V1923A[);/ ]'
@@ -2507,6 +2512,8 @@ Vivo:
       model: 'S5'
     - regex: 'V1962A[);/ ]'
       model: 'S6 5G'
+    - regex: 'V2020C?A[);/ ]'
+      model: 'S7'
     - regex: 'V1941A[);/ ]'
       model: 'U3'
     - regex: 'V1928A[);/ ]'
@@ -2561,6 +2568,8 @@ Vivo:
       model: 'X50'
     - regex: 'V2005A[);/ ]'
       model: 'X50 Pro'
+    - regex: 'V2011A[);/ ]'
+      model: 'X50 Pro Plus'
     - regex: 'X9Plus[);/ ]'
       model: 'X9 Plus'
     - regex: 'vivo 1902[);/ ]'
@@ -5533,7 +5542,7 @@ Hasee:
 
 # Hisense
 Hisense:
-  regex: '(?:HS-)?Hisense ([^;/]+) Build|Hisense [^);/]+|HS-(?:G|U|EG?|I|L|T|X)[0-9]+[a-z0-9\-]*|E270BSA|HITV300C|M470BS[AE]|E2281|EG680|I46D1G|HAT4KDTV|HLTE([237]00T|200M|21[23567]T|22[67]T|22[13]E|310[TM]|316T|510T|720T)'
+  regex: '(?:HS-)?Hisense ([^;/]+) Build|Hisense [^);/]+|HS-(?:G|U|EG?|I|L|T|X)[0-9]+[a-z0-9\-]*|E270BSA|HITV300C|M470BS[AE]|E2281|EG680|I46D1G|HAT4KDTV|HLTE([237]00T|200M|203T|202N|21[023567]T|22[67]T|22[13]E|310[TM]|31[16]T|500T|501N|510[TM]|7[23]0T)'
   device: 'smartphone'
   models:
     # explicit tablet models
@@ -5546,10 +5555,18 @@ Hisense:
     - regex: 'E2281'
       device: 'tablet'
       model: 'Sero 8'
+    - regex: 'HLTE202N'
+      model: 'A5'
+    - regex: 'HLTE203T'
+      model: 'A5 Pro CC'
     - regex: 'HLTE700T'
       model: 'A6'
+    - regex: 'HLTE730T'
+      model: 'A6L'
     - regex: 'HLTE221E'
       model: 'E Max'
+    - regex: 'HLTE501N'
+      model: 'V Plus'
     - regex: 'HLTE223E'
       model: 'H30'
     - regex: 'I46D1G'
@@ -5558,10 +5575,14 @@ Hisense:
       model: 'Smartfren Andromax Z'
     - regex: 'HLTE200T[);/ ]'
       model: 'F26'
+    - regex: 'HLTE210T[);/ ]'
+      model: 'F28'
     - regex: 'HLTE215T[);/ ]'
       model: 'F29'
     - regex: 'HLTE213T[);/ ]'
       model: 'King Kong 4'
+    - regex: 'HLTE311T[);/ ]'
+      model: 'King Kong 4 Pro'
     - regex: 'HLTE216T[);/ ]'
       model: 'King Kong 5'
     - regex: 'HLTE316T[);/ ]'
@@ -5574,8 +5595,10 @@ Hisense:
       model: 'F40'
     - regex: 'HLTE310[TM][);/ ]'
       model: 'H18'
-    - regex: 'HLTE510T[);/ ]'
+    - regex: 'HLTE510[TM][);/ ]'
       model: 'H20'
+    - regex: 'HLTE500T[);/ ]'
+      model: 'H11'
     - regex: 'HLTE720T[);/ ]'
       model: 'U30'
       device: 'phablet'
