feat(device) detect brand Realme models: X7 Pro 5G (RMX2121), X50 5G (RMX2025), X3 (RMX2142), V3 5G (RMX2200)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -9910,7 +9910,7 @@ OnePlus:
 
 # Realme (sub brand Oppo)
 Realme:
-  regex: '(?:RMX(?:19(03|4[1235]|19|9[23]|2[157]|[01379]1)|20[025-7]1|20[03]2|2027|2063|2072|2086|20[234]0|2111|2176|218[059]|18(0[1579]|11|3[13]|2[157]|[45]1|45))|(?:OPPO[ _]?)?CPH1861)[ ;/)]'
+  regex: '(?:RMX(?:19(03|4[1235]|19|9[23]|2[157]|[01379]1)|20(?:[025-7]1|[037]2|2[57]|63|86|[234]0)|21(?:[12]1|42|76|8[059])|2200|18(0[1579]|11|3[13]|2[157]|[45]1|45))|(?:OPPO[ _]?)?CPH1861)[ ;/)]'
   device: 'smartphone'
   models:
     - regex: '(?:OPPO[ _]?)?CPH1861[);/ ]'
@@ -9935,6 +9935,8 @@ Realme:
       model: 'X2 Pro'
     - regex: 'RMX2176[);/ ]'
       model: 'X7 5G'
+    - regex: 'RMX2121[);/ ]'
+      model: 'X7 Pro 5G'
     - regex: 'RMX1921'
       model: 'XT'
     - regex: 'RMX19(1[19]|27)'
@@ -9967,16 +9969,20 @@ Realme:
       model: 'C15'
     - regex: 'RMX1831[);/ ]'
       model: 'U1'
-    - regex: 'RMX2051[);/ ]'
+    - regex: 'RMX20(?:51|25)[);/ ]'
       model: 'X50 5G'
     - regex: 'RMX2071[);/ ]'
       model: 'X50 Pro'
     - regex: 'RMX2072[);/ ]'
       model: 'X50 Pro Player'
+    - regex: 'RMX2142[);/ ]'
+      model: 'X3'
     - regex: 'RMX2086[);/ ]'
       model: 'X3 Super Zoom'
     - regex: 'RMX2111'
       model: 'V5 5G'
+    - regex: 'RMX2200'
+      model: 'V3 5G'
 
 # oppo
 OPPO:
