feat(device) detect new brand 8848 models: M3, M4, M5, M6

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -17264,3 +17264,9 @@ Transpeed:
       model: 'TR99 Mini Plus'
     - regex: '(?:Transpeed_)?(TR99|6K)[);/ ]'
       model: '$1'
+
+# 8848 (everest 8848, 8848 titanium)
+8848:
+  regex: '8848 (M[3-6])[);/ ]'
+  device: 'smartphone'
+  model: '$1'
