--- a/Tests/fixtures/smartphone-18.yml
+++ b/Tests/fixtures/smartphone-18.yml
@@ -4177,3 +4177,83 @@
     model: Reno 4 Pro 5G
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 8.1.0; 8848 M5 Build/OPM1.171019.026; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/76.0.3809.89 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: 8.1.0
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Webview
+    short_name: CV
+    version: 76.0.3809.89
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: 88
+    model: M5
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 7.1.2; 8848 M4 Build/N2G47H; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/48.0.2564.116 Mobile Safari/537.36 baidubrowser/7.11.4.204 (Baidu; P1 7.1.2)
+  os:
+    name: Android
+    short_name: AND
+    version: 7.1.2
+    platform: ""
+  client:
+    type: browser
+    name: Baidu Browser
+    short_name: BD
+    version: 7.11.4.204
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: smartphone
+    brand: 88
+    model: M4
+  os_family: Android
+  browser_family: Baidu
+-
+  user_agent: Mozilla/5.0 (Linux; Android 6.0.1; 8848 M3 Build/1.6.1.59f311.20170329.user) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/35.0.1916.138 Mobile Safari/537.36 T7/7.5 baidubrowser/7.6.4.26 (Baidu; P1 6.0.1)
+  os:
+    name: Android
+    short_name: AND
+    version: 6.0.1
+    platform: ""
+  client:
+    type: browser
+    name: Baidu Browser
+    short_name: BD
+    version: 7.6.4.26
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: smartphone
+    brand: 88
+    model: M3
+  os_family: Android
+  browser_family: Baidu
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; 8848 M6 Build/QKQ1.200127.002; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/74.0.3729.186 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Webview
+    short_name: CV
+    version: 74.0.3729.186
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: 88
+    model: M6
+  os_family: Android
+  browser_family: Chrome
