feat(device) detect new brand VVETIME model: V1 (ZYVV1)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -2011,7 +2011,7 @@ Asus:
     - regex: '(?:ASUS_)?P00C|P02[138]|P00L|P01T_1'
       model: 'ZenPad 10'
       device: 'tablet'
-      
+
     # explicit phablet models
     - regex: 'ME371MG(?:[);/ ]|$)'
       model: 'Fonepad'
@@ -11610,7 +11610,7 @@ Samsung:
     - regex: '(?:SAMSUNG-)?SM-G5528'
       model: 'GALAXY On5 (2016)'
     - regex: '(?:SAMSUNG-)?SM-G600(?:FY|[0F])'
-      model: 'GALAXY On7'     
+      model: 'GALAXY On7'
     - regex: '(?:SAMSUNG-)?SM-G610[0KLS]'
       model: 'GALAXY On7 (2016)'
     - regex: '(?:SAMSUNG-)?SM-G611[FSKL]'
@@ -15633,7 +15633,7 @@ X-TIGI:
     - regex: 'X[-_]TIGI[ _-]([^/;)]+) Build'
       model: '$1'
 
-# Xiaolajiao
+# Xiaolajiao (Shenzhen Peppers)
 Xiaolajiao:
   regex: '(LA2-(?:L|S[N]?)|HLA Note3|20190416Q|20170608S|20180322D)(?:[);/ ]|$)'
   device: 'smartphone'
@@ -17274,3 +17274,9 @@ Transpeed:
   regex: '8848 (M[3-6])(?:[);/ ]|$)'
   device: 'smartphone'
   model: '$1'
+
+# VVETIME
+VVETIME:
+  regex: 'ZYVV1(?:[);/ ]|$)'
+  device: 'smartphone'
+  model: 'V1'
