feat(device) detect brand Gionee model: F103S feat(device) detect brand Gome model: C71 (2017X05A)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -5293,7 +5293,7 @@ Ginzzu:
 
 # Gionee
 Gionee:
-  regex: '(?:GIO-)?GIONEE[ _-]?[a-z0-9]+|(?:Dream_D1|V188S?|GN[0-9]{3,4}[a-z]?)(?:[);/ ]|$)|F103(?: Pro)? Build|P5 mini Build|P7 Max Build|(M7 Power|F106L|F100A)(?:[);/ ]|$)'
+  regex: '(?:GIO-)?GIONEE[ _-]?[a-z0-9]+|(?:Dream_D1|V188S?|GN[0-9]{3,4}[a-z]?)(?:[);/ ]|$)|F103(?: Pro)? Build|P5 mini Build|P7 Max Build|(M7 Power|F106L|F100A|F103S)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'GN810(?:[);/ ]|$)'
@@ -5301,7 +5301,7 @@ Gionee:
       device: 'phablet'
     - regex: 'GN([0-9]{3,4}[a-z]?)(?:[);/ ]|$)'
       model: 'GN$1'
-    - regex: '(F106L|F100A|V188S|V188)(?:[);/ ]|$)'
+    - regex: '(F106L|F100A|V188S|V188|F103S)(?:[);/ ]|$)'
       model: '$1'
     - regex: 'F103( Pro)? Build'
       model: 'F103$1'
@@ -16212,16 +16212,18 @@ Huadoo:
 
 # Gome
 Gome:
-  regex: 'GOME[_ ](2018X38A|2016G68A|2017M27A|2016M25A|C7_Note_Plus|U9|S[17])(?:[);/ ]|$)'
+  regex: 'GOME[_ ](2018X38A|2017X05A|2016G68A|2017M27A|2016M25A|C7_Note_Plus|U9|S[17])(?:[);/ ]|$)'
   device: 'smartphone'
   models:
-    - regex: 'GOME[_ ](2018X38A)(?:[);/ ]|$)'
+    - regex: 'GOME[_ ](?:2018X38A)(?:[);/ ]|$)'
       model: 'C72'
-    - regex: 'GOME[_ ](2016G68A)(?:[);/ ]|$)'
+    - regex: 'GOME[_ ](?:2017X05A)(?:[);/ ]|$)'
+      model: 'C71'
+    - regex: 'GOME[_ ](?:2016G68A)(?:[);/ ]|$)'
       model: 'K1'
-    - regex: 'GOME[_ ](2016M25A)(?:[);/ ]|$)'
+    - regex: 'GOME[_ ](?:2016M25A)(?:[);/ ]|$)'
       model: 'U1'
-    - regex: 'GOME[_ ](2017M27A)(?:[);/ ]|$)'
+    - regex: 'GOME[_ ](?:2017M27A)(?:[);/ ]|$)'
       model: 'U7'
     - regex: 'GOME[_ ](C7_Note_Plus|U9|S[17])(?:[);/ ]|$)'
       model: '$1'
