--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -7119,7 +7119,7 @@ Kaan:
 
 # Kazam
 Kazam:
-  regex: 'Kazam(?:[);/ ]|$)|Trooper_X[0-9][0-9](?:[);/ ]|$)|Tornado 348'
+  regex: 'Kazam(?:[^);/]+)(?:[);/ ]|$)|Trooper_X[0-9][0-9](?:[);/ ]|$)|Tornado 348'
   device: 'smartphone'
   models:
     - regex: 'Tornado 348'
