feat(mobile) added `[; _]` after Kazam in detect general models

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -7128,7 +7128,7 @@ Kazam:
       model: 'Thunder 450W'
     - regex: 'Trooper_X([0-9])([0-9])(?:[);/ ]|$)'
       model: 'Trooper X$1.$2'
-    - regex: 'Kazam ([^;/)]+)(?: Build|\))'
+    - regex: 'Kazam[; _]([^;/)]+)(?: Build|\))'
       model: '$1'
 
 # Keneksi
