sort test fixtures

--- a/Tests/fixtures/mobile_apps.yml
+++ b/Tests/fixtures/mobile_apps.yml
@@ -536,7 +536,7 @@
   client:
     type: mobile app
     name: HeyTapBrowser
-    version: 40.7.4.1
+    version: "40.7.4.1"
   device:
     type: smartphone
     brand: OP
@@ -553,7 +553,7 @@
   client:
     type: mobile app
     name: Roblox
-    version: 2.448.411159
+    version: "2.448.411159"
   device:
     type: smartphone
     brand: SA
@@ -570,7 +570,7 @@
   client:
     type: mobile app
     name: Roblox
-    version: 2.448.411159
+    version: "2.448.411159"
   device:
     type: smartphone
     brand: AP
