--- a/Tests/fixtures/desktop.yml
+++ b/Tests/fixtures/desktop.yml
@@ -1837,6 +1837,26 @@
   os_family: Windows
   browser_family: Chrome
 - 
+  user_agent: Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Bridge/2020.3.2 Chrome/69.0.3497.128 Electron/4.2.12 Safari/537.36
+  os:
+    name: Windows
+    short_name: WIN
+    version: "7"
+    platform: x64
+  client:
+    type: browser
+    name: Chrome
+    short_name: CH
+    version: "69.0.3497.128"
+    engine: Blink
+    engine_version: ""
+  device:
+    type: desktop
+    brand: ""
+    model: ""
+  os_family: Windows
+  browser_family: Chrome
+- 
   user_agent: Mozilla/5.0 (compatible; MSIE 9.0; Windows NT 6.1; WOW64; Trident/5.0; chromeframe/19.0.1084.52)
   os:
     name: Windows
@@ -1990,6 +2010,26 @@
     version: "2.5.6"
     engine: Gecko
     engine_version: "1.9.0.16"
+  device:
+    type: desktop
+    brand: ""
+    model: ""
+  os_family: Windows
+  browser_family: Unknown
+- 
+  user_agent: GOGGalaxyClient/2.0.20.39 (GOG Galaxy) 83b6745cff679691b69876bc7ee33e05e5d90bda (win7 x64)
+  os:
+    name: Windows
+    short_name: WIN
+    version: "7"
+    platform: x64
+  client:
+    type: browser
+    name: GOG Galaxy
+    short_name: GO
+    version: "2.0.20.39"
+    engine: ""
+    engine_version: ""
   device:
     type: desktop
     brand: ""
@@ -2741,6 +2781,226 @@
     model: ""
   os_family: Windows
   browser_family: Opera
+- 
+  user_agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Bridge/2020.2.1 Chrome/69.0.3497.128 Electron/4.2.12 Safari/537.36
+  os:
+    name: Windows
+    short_name: WIN
+    version: "10"
+    platform: x64
+  client:
+    type: browser
+    name: Chrome
+    short_name: CH
+    version: "69.0.3497.128"
+    engine: Blink
+    engine_version: ""
+  device:
+    type: desktop
+    brand: ""
+    model: ""
+  os_family: Windows
+  browser_family: Chrome
+- 
+  user_agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Bridge/2020.2.3 Chrome/69.0.3497.128 Electron/4.2.12 Safari/537.36
+  os:
+    name: Windows
+    short_name: WIN
+    version: "10"
+    platform: x64
+  client:
+    type: browser
+    name: Chrome
+    short_name: CH
+    version: "69.0.3497.128"
+    engine: Blink
+    engine_version: ""
+  device:
+    type: desktop
+    brand: ""
+    model: ""
+  os_family: Windows
+  browser_family: Chrome
+- 
+  user_agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Bridge/2020.3.1 Chrome/69.0.3497.128 Electron/4.2.12 Safari/537.36
+  os:
+    name: Windows
+    short_name: WIN
+    version: "10"
+    platform: x64
+  client:
+    type: browser
+    name: Chrome
+    short_name: CH
+    version: "69.0.3497.128"
+    engine: Blink
+    engine_version: ""
+  device:
+    type: desktop
+    brand: ""
+    model: ""
+  os_family: Windows
+  browser_family: Chrome
+- 
+  user_agent: GOGGalaxyClient/2.0.13.184 (GOG Galaxy) 83b6745cff679691b69876bc7ee33e05e5d90bda (win10 x64)
+  os:
+    name: Windows
+    short_name: WIN
+    version: "10"
+    platform: x64
+  client:
+    type: browser
+    name: GOG Galaxy
+    short_name: GO
+    version: "2.0.13.184"
+    engine: ""
+    engine_version: ""
+  device:
+    type: desktop
+    brand: ""
+    model: ""
+  os_family: Windows
+  browser_family: Unknown
+- 
+  user_agent: GOGGalaxyClient/2.0.14.254 (GOG Galaxy) 83b6745cff679691b69876bc7ee33e05e5d90bda (win10 x64)
+  os:
+    name: Windows
+    short_name: WIN
+    version: "10"
+    platform: x64
+  client:
+    type: browser
+    name: GOG Galaxy
+    short_name: GO
+    version: "2.0.14.254"
+    engine: ""
+    engine_version: ""
+  device:
+    type: desktop
+    brand: ""
+    model: ""
+  os_family: Windows
+  browser_family: Unknown
+- 
+  user_agent: GOGGalaxyClient/2.0.15.43 (GOG Galaxy) 83b6745cff679691b69876bc7ee33e05e5d90bda (win10 x64)
+  os:
+    name: Windows
+    short_name: WIN
+    version: "10"
+    platform: x64
+  client:
+    type: browser
+    name: GOG Galaxy
+    short_name: GO
+    version: "2.0.15.43"
+    engine: ""
+    engine_version: ""
+  device:
+    type: desktop
+    brand: ""
+    model: ""
+  os_family: Windows
+  browser_family: Unknown
+- 
+  user_agent: GOGGalaxyClient/2.0.16.187 (GOG Galaxy) 83b6745cff679691b69876bc7ee33e05e5d90bda (win10 x64)
+  os:
+    name: Windows
+    short_name: WIN
+    version: "10"
+    platform: x64
+  client:
+    type: browser
+    name: GOG Galaxy
+    short_name: GO
+    version: "2.0.16.187"
+    engine: ""
+    engine_version: ""
+  device:
+    type: desktop
+    brand: ""
+    model: ""
+  os_family: Windows
+  browser_family: Unknown
+- 
+  user_agent: GOGGalaxyClient/2.0.17.61 (GOG Galaxy) 83b6745cff679691b69876bc7ee33e05e5d90bda (win10 x64)
+  os:
+    name: Windows
+    short_name: WIN
+    version: "10"
+    platform: x64
+  client:
+    type: browser
+    name: GOG Galaxy
+    short_name: GO
+    version: "2.0.17.61"
+    engine: ""
+    engine_version: ""
+  device:
+    type: desktop
+    brand: ""
+    model: ""
+  os_family: Windows
+  browser_family: Unknown
+- 
+  user_agent: GOGGalaxyClient/2.0.18.56 (GOG Galaxy) 83b6745cff679691b69876bc7ee33e05e5d90bda (win10 x64)
+  os:
+    name: Windows
+    short_name: WIN
+    version: "10"
+    platform: x64
+  client:
+    type: browser
+    name: GOG Galaxy
+    short_name: GO
+    version: "2.0.18.56"
+    engine: ""
+    engine_version: ""
+  device:
+    type: desktop
+    brand: ""
+    model: ""
+  os_family: Windows
+  browser_family: Unknown
+- 
+  user_agent: GOGGalaxyClient/2.0.19.37 (GOG Galaxy) 83b6745cff679691b69876bc7ee33e05e5d90bda (win10 x64)
+  os:
+    name: Windows
+    short_name: WIN
+    version: "10"
+    platform: x64
+  client:
+    type: browser
+    name: GOG Galaxy
+    short_name: GO
+    version: "2.0.19.37"
+    engine: ""
+    engine_version: ""
+  device:
+    type: desktop
+    brand: ""
+    model: ""
+  os_family: Windows
+  browser_family: Unknown
+- 
+  user_agent: GOGGalaxyClient/2.0.20.39 (GOG Galaxy) 83b6745cff679691b69876bc7ee33e05e5d90bda (win10 x64)
+  os:
+    name: Windows
+    short_name: WIN
+    version: "10"
+    platform: x64
+  client:
+    type: browser
+    name: GOG Galaxy
+    short_name: GO
+    version: "2.0.20.39"
+    engine: ""
+    engine_version: ""
+  device:
+    type: desktop
+    brand: ""
+    model: ""
+  os_family: Windows
+  browser_family: Unknown
 - 
   user_agent: Mozilla/4.0 (compatible; MSIE 7.0; Windows NT 10.0; WOW64; Trident/8.0; .NET4.0C; .NET4.0E; .NET CLR 2.0.50727; .NET CLR 3.0.30729; .NET CLR 3.5.30729; Microsoft Outlook 15.0.4737; ms-office; MSOffice 15)
   os:
@@ -3858,6 +4118,26 @@
   os_family: Windows
   browser_family: Unknown
 - 
+  user_agent: Mozilla/5.0 (Linux; Android 5.1; HiBox-hero) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/78.0.3904.62 Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: "5.1"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    short_name: CH
+    version: "78.0.3904.62"
+    engine: Blink
+    engine_version: ""
+  device:
+    type: desktop
+    brand: 1C
+    model: HiBox Hero
+  os_family: Android
+  browser_family: Chrome
+- 
   user_agent: Mozilla/4.0 (compatible; MSIE 7.0; Windows NT 6.1; Trident/7.0; SLCC2; .NET CLR 2.0.50727; Media Center PC 6.0; MAAR; Tablet PC 2.0; .NET CLR 3.5.30729; .NET CLR 3.0.30729; .NET4.0C; .NET4.0E)
   os:
     name: Windows
@@ -4085,6 +4365,26 @@
     model: ""
   os_family: Mac
   browser_family: Unknown
+- 
+  user_agent: Mozilla/5.0 (Macintosh; Intel Mac OS X; U; en; rv:1.8.0) Gecko/20060728 Firefox/1.5.0 Opera 9.27
+  os:
+    name: Mac
+    short_name: MAC
+    version: ""
+    platform: ""
+  client:
+    type: browser
+    name: Opera
+    short_name: OP
+    version: "9.27"
+    engine: Presto
+    engine_version: ""
+  device:
+    type: desktop
+    brand: AP
+    model: ""
+  os_family: Mac
+  browser_family: Opera
 - 
   user_agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 1091) AppleWebKit/537.36 (KHTML like Gecko) Chrome/33.0.1750.91 Safari/537.36 OPR/20.0.1387.37 (Edition Next)
   os:
@@ -6173,283 +6473,3 @@
     model: Satellite S855
   os_family: Windows
   browser_family: Unknown
--
-  user_agent: Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Bridge/2020.3.2 Chrome/69.0.3497.128 Electron/4.2.12 Safari/537.36
-  os:
-    name: Windows
-    short_name: WIN
-    version: 7
-    platform: x64
-  client:
-    type: browser
-    name: Chrome
-    short_name: CH
-    version: 69.0.3497.128
-    engine: Blink
-    engine_version:
-  device:
-    type: desktop
-    brand:
-    model:
-  os_family: Windows
-  browser_family: Chrome
--
-  user_agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Bridge/2020.3.1 Chrome/69.0.3497.128 Electron/4.2.12 Safari/537.36
-  os:
-    name: Windows
-    short_name: WIN
-    version: 10
-    platform: x64
-  client:
-    type: browser
-    name: Chrome
-    short_name: CH
-    version: 69.0.3497.128
-    engine: Blink
-    engine_version:
-  device:
-    type: desktop
-    brand:
-    model:
-  os_family: Windows
-  browser_family: Chrome
--
-  user_agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Bridge/2020.2.3 Chrome/69.0.3497.128 Electron/4.2.12 Safari/537.36
-  os:
-    name: Windows
-    short_name: WIN
-    version: 10
-    platform: x64
-  client:
-    type: browser
-    name: Chrome
-    short_name: CH
-    version: 69.0.3497.128
-    engine: Blink
-    engine_version:
-  device:
-    type: desktop
-    brand:
-    model:
-  os_family: Windows
-  browser_family: Chrome
--
-  user_agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Bridge/2020.2.1 Chrome/69.0.3497.128 Electron/4.2.12 Safari/537.36
-  os:
-    name: Windows
-    short_name: WIN
-    version: 10
-    platform: x64
-  client:
-    type: browser
-    name: Chrome
-    short_name: CH
-    version: 69.0.3497.128
-    engine: Blink
-    engine_version:
-  device:
-    type: desktop
-    brand:
-    model:
-  os_family: Windows
-  browser_family: Chrome
--
-  user_agent: GOGGalaxyClient/2.0.20.39 (GOG Galaxy) 83b6745cff679691b69876bc7ee33e05e5d90bda (win7 x64)
-  os:
-    name: Windows
-    short_name: WIN
-    version: 7
-    platform: x64
-  client:
-    type: browser
-    name: GOG Galaxy
-    short_name: GO
-    version: 2.0.20.39
-    engine: ''
-    engine_version: ''
-  device:
-    type: desktop
-    brand:
-    model:
-  os_family: Windows
-  browser_family: Unknown
--
-  user_agent: GOGGalaxyClient/2.0.20.39 (GOG Galaxy) 83b6745cff679691b69876bc7ee33e05e5d90bda (win10 x64)
-  os:
-    name: Windows
-    short_name: WIN
-    version: 10
-    platform: x64
-  client:
-    type: browser
-    name: GOG Galaxy
-    short_name: GO
-    version: 2.0.20.39
-    engine: ''
-    engine_version: ''
-  device:
-    type: desktop
-    brand:
-    model:
-  os_family: Windows
-  browser_family: Unknown
--
-  user_agent: GOGGalaxyClient/2.0.19.37 (GOG Galaxy) 83b6745cff679691b69876bc7ee33e05e5d90bda (win10 x64)
-  os:
-    name: Windows
-    short_name: WIN
-    version: 10
-    platform: x64
-  client:
-    type: browser
-    name: GOG Galaxy
-    short_name: GO
-    version: 2.0.19.37
-    engine: ''
-    engine_version: ''
-  device:
-    type: desktop
-    brand:
-    model:
-  os_family: Windows
-  browser_family: Unknown
--
-  user_agent: GOGGalaxyClient/2.0.18.56 (GOG Galaxy) 83b6745cff679691b69876bc7ee33e05e5d90bda (win10 x64)
-  os:
-    name: Windows
-    short_name: WIN
-    version: 10
-    platform: x64
-  client:
-    type: browser
-    name: GOG Galaxy
-    short_name: GO
-    version: 2.0.18.56
-    engine: ''
-    engine_version: ''
-  device:
-    type: desktop
-    brand:
-    model:
-  os_family: Windows
-  browser_family: Unknown
--
-  user_agent: GOGGalaxyClient/2.0.17.61 (GOG Galaxy) 83b6745cff679691b69876bc7ee33e05e5d90bda (win10 x64)
-  os:
-    name: Windows
-    short_name: WIN
-    version: 10
-    platform: x64
-  client:
-    type: browser
-    name: GOG Galaxy
-    short_name: GO
-    version: 2.0.17.61
-    engine: ''
-    engine_version: ''
-  device:
-    type: desktop
-    brand:
-    model:
-  os_family: Windows
-  browser_family: Unknown
--
-  user_agent: GOGGalaxyClient/2.0.16.187 (GOG Galaxy) 83b6745cff679691b69876bc7ee33e05e5d90bda (win10 x64)
-  os:
-    name: Windows
-    short_name: WIN
-    version: 10
-    platform: x64
-  client:
-    type: browser
-    name: GOG Galaxy
-    short_name: GO
-    version: 2.0.16.187
-    engine: ''
-    engine_version: ''
-  device:
-    type: desktop
-    brand:
-    model:
-  os_family: Windows
-  browser_family: Unknown
--
-  user_agent: GOGGalaxyClient/2.0.15.43 (GOG Galaxy) 83b6745cff679691b69876bc7ee33e05e5d90bda (win10 x64)
-  os:
-    name: Windows
-    short_name: WIN
-    version: 10
-    platform: x64
-  client:
-    type: browser
-    name: GOG Galaxy
-    short_name: GO
-    version: 2.0.15.43
-    engine: ''
-    engine_version: ''
-  device:
-    type: desktop
-    brand:
-    model:
-  os_family: Windows
-  browser_family: Unknown
--
-  user_agent: GOGGalaxyClient/2.0.14.254 (GOG Galaxy) 83b6745cff679691b69876bc7ee33e05e5d90bda (win10 x64)
-  os:
-    name: Windows
-    short_name: WIN
-    version: 10
-    platform: x64
-  client:
-    type: browser
-    name: GOG Galaxy
-    short_name: GO
-    version: 2.0.14.254
-    engine: ''
-    engine_version: ''
-  device:
-    type: desktop
-    brand:
-    model:
-  os_family: Windows
-  browser_family: Unknown
--
-  user_agent: GOGGalaxyClient/2.0.13.184 (GOG Galaxy) 83b6745cff679691b69876bc7ee33e05e5d90bda (win10 x64)
-  os:
-    name: Windows
-    short_name: WIN
-    version: 10
-    platform: x64
-  client:
-    type: browser
-    name: GOG Galaxy
-    short_name: GO
-    version: 2.0.13.184
-    engine: ''
-    engine_version: ''
-  device:
-    type: desktop
-    brand:
-    model:
-  os_family: Windows
-  browser_family: Unknown
--
-  user_agent: Mozilla/5.0 (Macintosh; Intel Mac OS X; U; en; rv:1.8.0) Gecko/20060728 Firefox/1.5.0 Opera 9.27
-  os:
-    name: Mac
-    short_name: MAC
-    version: ""
-    platform: ""
-  client:
-    type: browser
-    name: Opera
-    short_name: OP
-    version: "9.27"
-    engine: Presto
-    engine_version: ""
-  device:
-    type: desktop
-    brand: AP
-    model: ""
-  os_family: Mac
-  browser_family: Opera
