--- a/Tests/fixtures/unknown.yml
+++ b/Tests/fixtures/unknown.yml
@@ -39,6 +39,22 @@
   os_family: Unknown
   browser_family: Unknown
 - 
+  user_agent: Mozilla/5.0 AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/80.0.3987.117 Mobile Safari/537.36
+  os: [ ]
+  client:
+    type: browser
+    name: Chrome Webview
+    short_name: CV
+    version: "80.0.3987.117"
+    engine: Blink
+    engine_version: ""
+  device:
+    type: ""
+    brand: ""
+    model: ""
+  os_family: Unknown
+  browser_family: Chrome
+- 
   user_agent: Dillo/0.8.5-i18n-misc
   os: [ ]
   client:
@@ -3214,19 +3230,3 @@
     model: ""
   os_family: iOS
   browser_family: Unknown
--
-  user_agent: Mozilla/5.0 AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/80.0.3987.117 Mobile Safari/537.36
-  os: []
-  client:
-    type: browser
-    name: Chrome Webview
-    short_name: CV
-    version: 80.0.3987.117
-    engine: Blink
-    engine_version:
-  device:
-    type:
-    brand:
-    model:
-  os_family: Unknown
-  browser_family: Chrome
